--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Never too late to find a Christmas party!"
+    />
     <link
-      href="https://fonts.googleapis.com/css?family=Poppins|Montserrat:700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
     <title>Stay22 - Challenge - Tiago Mota</title>
